
[package]
name = "ramidier"
version = "0.1.0"
authors = ["RakuJa"]

# Compiler info
edition = "2024"
rust-version = "1.85.1"

description = "Akai Pro Apc key 25 abstraction layer"
readme = "README.md"
homepage = "https://github.com/RakuJa/ramidier"
repository = "https://github.com/RakuJa/ramidier"
license = "MIT"
keywords = ["midi", "layer", "akai"]
categories = ["encoding", "api-bindings"]
publish = true

[lib]
name = "ramidier"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
struct_field_names = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
# We are ok with losing some data without wrapping. We are not ok with wrapping
# Ex: 128.12 => 128 is ok, 128 => 0 is not.
cast_possible_truncation = { level = "allow", priority = 2 }
cast_precision_loss = { level = "allow", priority = 2 }

future_not_send = { level = "allow", priority = 2 }

pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }


[dependencies]
midir = "0.10"
midi-msg = "0.8"

bon = "3"
thiserror = "2"
log = "0"
num_enum = "0.7"

[features]
default = []
winrt = ["midir/winrt"]
jack = ["midir/jack"]
jack-sys = ["midir/jack-sys"]
libc = ["midir/libc"]